[gd_scene load_steps=23 format=3 uid="uid://bbay4wqkkgib3"]

[ext_resource type="Script" uid="uid://be5353asm7wod" path="res://ui.gd" id="1_fyqef"]
[ext_resource type="Texture2D" uid="uid://bleogilxixy8r" path="res://Power ups/Coin.png" id="2_m6e0p"]
[ext_resource type="Shader" uid="uid://coswkw8xg4l6c" path="res://ui.gdshader" id="3_27fn8"]
[ext_resource type="Texture2D" uid="uid://d3fjbjrheag2i" path="res://Bloques/Bloques.png" id="4_nltto"]
[ext_resource type="FontFile" uid="uid://pd838cce85ve" path="res://bandera/Super-Mario-World.ttf" id="5_ibotj"]
[ext_resource type="Shader" uid="uid://cwjdsmiuuvym3" path="res://sound.gdshader" id="5_n5ude"]
[ext_resource type="PackedScene" uid="uid://dgny7xe7nlgya" path="res://teclas.tscn" id="7_y4yjw"]

[sub_resource type="Animation" id="Animation_27fn8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer2/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.592157)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer2/juego:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.592157)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer2/cancion:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.592157)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer2/ColorRect:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1008, 512)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MarginContainer2/juego:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1024, 584)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MarginContainer2/cancion:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1024, 528)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ColorRect:color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ibotj"]
resource_name = "enter music"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer2/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.49),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.772549), Color(1, 1, 1, 0.772549)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer2/juego:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.49),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.772549), Color(1, 1, 1, 0.772549)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer2/cancion:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.49),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.772549), Color(1, 1, 1, 0.772549)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer2/ColorRect:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 0.766667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1008, 512), Vector2(624, 512), Vector2(480, 512), Vector2(448, 512)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MarginContainer2/juego:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 0.766667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1120, 584), Vector2(736, 584), Vector2(592, 584), Vector2(560, 584)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MarginContainer2/cancion:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 0.766667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1112, 528), Vector2(728, 528), Vector2(584, 528), Vector2(552, 528)]
}

[sub_resource type="Animation" id="Animation_waa4j"]
resource_name = "fade_in_level"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 2.07053),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_y4yjw"]
resource_name = "fade out level"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 8.53333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_nltto"]
resource_name = "send back"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer2/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.772549), Color(1, 1, 1, 0.592157), Color(1, 1, 1, 0.380392)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer2/juego:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.772549), Color(1, 1, 1, 0.592157), Color(1, 1, 1, 0.380392)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer2/cancion:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.772549), Color(1, 1, 1, 0.592157), Color(1, 1, 1, 0.380392)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer2/ColorRect:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.366667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(448, 512), Vector2(696, 512), Vector2(904, 512)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MarginContainer2/juego:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.366667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(560, 584), Vector2(808, 584), Vector2(1016, 584)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MarginContainer2/cancion:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(552, 528), Vector2(800, 528), Vector2(1008, 528)]
}

[sub_resource type="Animation" id="Animation_n5ude"]
resource_name = "send front"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer2/cancion:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.34, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1008, 528), Vector2(800, 529), Vector2(552, 529)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer2/juego:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.34, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1016, 584), Vector2(808, 585), Vector2(560, 585)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer2/ColorRect:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.34, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(904, 512), Vector2(696, 513), Vector2(448, 513)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer2/cancion:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.35, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.380392), Color(1, 1, 1, 0.592157), Color(1, 1, 1, 0.772549)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MarginContainer2/juego:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.35, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.380392), Color(1, 1, 1, 0.592157), Color(1, 1, 1, 0.772549)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MarginContainer2/ColorRect:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.35, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.380392), Color(1, 1, 1, 0.592157), Color(1, 1, 1, 0.772549)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nltto"]
_data = {
&"RESET": SubResource("Animation_27fn8"),
&"enter music": SubResource("Animation_ibotj"),
&"fade_in_level": SubResource("Animation_waa4j"),
&"fade_out_level": SubResource("Animation_y4yjw"),
&"send back": SubResource("Animation_nltto"),
&"send front": SubResource("Animation_n5ude")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_27fn8"]
shader = ExtResource("3_27fn8")
shader_parameter/influence = 0.2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nltto"]
size = Vector2(92, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5ude"]
atlas = ExtResource("4_nltto")
region = Rect2(17, 17, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_y4yjw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5ude")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y4yjw"]
shader = ExtResource("5_n5ude")
shader_parameter/lines = 80
shader_parameter/amplitude = 0.9
shader_parameter/frequency = 0.1
shader_parameter/intensity = 0.75
shader_parameter/line_sharpness = 0.5
shader_parameter/line_size = 0.8
shader_parameter/fade = 0.1
shader_parameter/rest_size = -0.2
shader_parameter/edge = 0.05
shader_parameter/speed = 0.5
shader_parameter/dot_matrix = false
shader_parameter/dot_matriz_size = 80
shader_parameter/speech_sim = true
shader_parameter/speech_intensity = 0.8
shader_parameter/progress = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nltto"]

[sub_resource type="LabelSettings" id="LabelSettings_n5ude"]
font = ExtResource("5_ibotj")

[sub_resource type="LabelSettings" id="LabelSettings_waa4j"]
font = ExtResource("5_ibotj")
font_size = 32

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_fyqef")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -231.0
offset_top = -102.0
offset_right = 1343.0
offset_bottom = 758.0
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_nltto")
}

[node name="MarginContainer2" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="MarginContainer2"]
modulate = Color(1, 1, 1, 0.592157)
material = SubResource("ShaderMaterial_27fn8")
offset_left = 1008.0
offset_top = 512.0
offset_right = 1604.0
offset_bottom = 627.0
color = Color(0.22, 0.22, 0.22, 0.823529)

[node name="Area2D" type="Area2D" parent="MarginContainer2/ColorRect"]
position = Vector2(-904, -512)
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MarginContainer2/ColorRect/Area2D"]
position = Vector2(950, 569.5)
shape = SubResource("RectangleShape2D_nltto")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MarginContainer2/ColorRect"]
modulate = Color(1, 1, 1, 0.772549)
position = Vector2(48, 56)
scale = Vector2(3.5, 3.5)
sprite_frames = SubResource("SpriteFrames_y4yjw")

[node name="ColorRect" type="ColorRect" parent="MarginContainer2/ColorRect"]
material = SubResource("ShaderMaterial_y4yjw")
layout_mode = 0
offset_left = 222.0
offset_right = 592.0
offset_bottom = 111.0

[node name="juego" type="Label" parent="MarginContainer2"]
modulate = Color(1, 1, 1, 0.592157)
material = SubResource("ShaderMaterial_nltto")
offset_left = 1024.0
offset_top = 584.0
offset_right = 1129.0
offset_bottom = 602.0
text = "asdasd"
label_settings = SubResource("LabelSettings_n5ude")
vertical_alignment = 3
autowrap_mode = 1

[node name="cancion" type="Label" parent="MarginContainer2"]
modulate = Color(1, 1, 1, 0.592157)
offset_left = 1024.0
offset_top = 528.0
offset_right = 1129.0
offset_bottom = 564.0
text = "hola"
label_settings = SubResource("LabelSettings_waa4j")

[node name="Timer" type="Timer" parent="."]
wait_time = 7.5
one_shot = true

[node name="Teclas" parent="." instance=ExtResource("7_y4yjw")]
visible = false

[node name="Control" type="Control" parent="."]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 2
offset_right = 226.0
offset_bottom = 40.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 20

[node name="Sprite2D" type="Sprite2D" parent="Control/MarginContainer/HBoxContainer"]
position = Vector2(16, 16)
scale = Vector2(2.1, 2.1)
texture = ExtResource("2_m6e0p")

[node name="CoinsLabel" type="Label" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "        x 0"

[node name="EnemiesLabel" type="Label" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Enemies defeted:"

[connection signal="mouse_entered" from="MarginContainer2/ColorRect/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
